
[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"

# GOOD
# solana-program = "~1.8.14"

# BAD
solana-program = "1.11.1"
getrandom = { version = "0.2.2", features = ["custom"] }

# GOOD
# [dev-dependencies]
# solana-program-test = "~1.8.14"
# solana-sdk = "~1.8.14"

# BAD
[dev-dependencies]
solana-program-test = "1.11.1"
solana-sdk = "1.11.1"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
